Creata la funzione per eliminare una task

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                 Done
                             </button>
                             <!-- Pulsante Task Delete -->
-                            <button type="button" class="btn btn-danger me-5">
+                            <button @click="eliminaTask(index)" type="button" class="btn btn-danger me-5">
                                 Delete
                             </button>
                         </div>
