Aggiunta funzione al pulsante done che sbarra il testo della task

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
             <ul class="p-0 list-unstyled">
                 <li v-for="(item,index) in list">
                     <div class="d-flex justify-content-between border-bottom">
-                        <div class="text-white">
+                        <div class="text-white" :class="item.done ? 'style-done' : ''">
                             <strong >
                                 {{item.text}}
                             </strong>
                         </div>
                         <div >
                             <!-- Pulsante Task Done -->
-                            <button type="button" class="btn btn-light me-2">
+                            <button  @click="statusTask(index)" type="button" class="btn btn-light me-2">
                                 Done
                             </button>
                             <!-- Pulsante Task Delete -->
