--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
     <div class="container">
         <div class="content-list mt-5">
             <!-- Lista dinamica -->
-            <ul class="p-0 list-unstyled">
+            <ul class=" list-unstyled">
                 <li v-for="(item,index) in list">
-                    <div class="d-flex justify-content-between border-bottom">
-                        <div class="text-white" :class="item.done ? 'style-done' : ''">
-                            <strong >
+                    <div class="d-flex justify-content-between align-items-center border-bottom py-3">
+                        <div :class="item.done ? 'style-done' : ''">
+                            <strong class="text-white" >
                                 {{item.text}}
                             </strong>
                         </div>
                         <div >
                             <!-- Pulsante Task Done -->
-                            <button  @click="statusTask(index)" class="btn btn-light me-2" type="button">
+                            <button  @click="statusTask(index)" class="btn btn-light me-3" type="button">
                                 <i class="fas fa-check text-success" :class="item.done ? 'fas fa-x text-danger' : ''" ></i>
                             </button>
                             <!-- Pulsante Task Delete -->
-                            <button @click="eliminaTask(index)" type="button" class="btn btn-danger me-5">
+                            <button @click="eliminaTask(index)" type="button" class="btn btn-danger">
                                 <i class="fas fa-trash-can"></i>
                             </button>
                         </div>
@@ -40,15 +40,18 @@
                 </li>
             </ul>
             <!-- Fine Lista dinamica -->
+            <div class="d-flex">
 
-            <!-- Campo input inserisci -->
-            <input v-model="task_nuova"  @keyup.enter="aggiungiTask" type="text" placeholder="Aggiungi nella lista...">
+                <!-- Campo input inserisci -->
+                <input v-model="task_nuova" @keyup.enter="aggiungiTask" class="form-control" type="text" placeholder="Aggiungi alla lista...">
+    
+                <!-- Pulsante inserisci -->
+                <button @click="aggiungiTask"  type="button" class="btn btn-light ms-3">
+                    <i class="fas fa-plus"></i>
+                </button>
+                <!-- Fine Campo input -->
 
-            <!-- Pulsante inserisci -->
-            <button @click="aggiungiTask"  type="button" class="btn btn-light">
-                <i class="fas fa-plus"></i>
-            </button>
-            <!-- Fine Campo input -->
+            </div>
         </div>
 
     </div>
